--- a/src/views/index.html
+++ b/src/views/index.html
@@ -23,7 +23,7 @@
     ></script>
   </head>
 
-  <body>
+  <body class="app-body">
     <!-- Toast Container -->
     <div
       class="toast-container position-fixed top-0 end-0 p-3"
@@ -33,7 +33,7 @@
     </div>
 
     <!-- 헤더 -->
-    <nav class="navbar navbar-expand-lg navbar-light bg-white shadow-sm mb-4">
+    <nav class="navbar navbar-expand-lg app-nav shadow-sm mb-4">
       <div class="container">
         <a class="navbar-brand fw-bold" href="/">
           <span style="font-size: 1.8rem">🍊</span> 다마라
